2012-04-23  Vladimir Makarov  <vmakarov@redhat.com>

	* targhooks.h (default_different_addr_displacement_p): Declare.

	* targhooks.c (default_different_addr_displacement_p): New
	function.

	* target.def (different_addr_displacement_p): New hook.

	* rtlanal.c (simplify_subreg_regno): Permit ARG_POINTER_REGNUM
	for LRA.

	* lra-spills.c (spill_pseudos): Check
	different_addr_displacement_p to invalidate insn alternative.

	* config/pa/pa.c (TARGET_DIFFERENT_ADDR_DISPLACEMENT_P): Redefine
	it.
	(pa_secondary_reload): Return NO_REGS for LRA.
	(pa_different_addr_displacement_p): New function.

	* doc/tm.texi: Rebuild.

2012-04-19  Vladimir Makarov  <vmakarov@redhat.com>

	* config/mips/mips.c (mips_expand_fcc_reload): Remove code for
	LRA.  Add an assertion.
	(mips_secondary_reload): New function.
	(TARGET_SECONDARY_RELOAD): Redefine.

2012-04-06  Vladimir Makarov  <vmakarov@redhat.com>

	* config/mips/mips.c: Include lra.h.
	(mips_expand_fcc_reload): Add code for LRA.

	* lra-int.h (lra_get_allocno_class, lra_create_new_reg): Move to ...

	* lra.h: ... here.

	* lra.c (collect_non_operand_hard_regs): Use REGMODE_NATURAL_SIZE.

	* lra-assign.c (assign_by_spills): Set up changed_pseudo_bitmap
	for pseudo got a hard reg.

2012-03-27  Vladimir Makarov  <vmakarov@redhat.com>

	* common.opt (flra-reg-spill): New option.

	* doc/tm.texi (TARGET_SPILL_CLASS, TARGET_SPILL_CLASS_MODE): New
	hooks.

	* target.def (spill_class, spill_class_mode): New hooks.

	* target.h: Include tm.h.

	* lra-int.h (lra_reg_spill_p): New external.

	* lra.c (lra_reg_spill_p): New global var.
	(setup_reg_spill_flag): New function.
	(lra): Call setup_reg_spill_flag.  Use lra_reg_spill_p as an
	argument for lra_create_live_ranges before spill sub-pass.

	* lra-spills.c: Include ira.h.
	(spill_hard_reg): New array.
	(struct slot): Add new memebr hard_regno.
	(assign_slot): Rename to assign_mem_slot.
	(assign_spill_hard_regs): New function.
	(add_pseudo_to_slot): Ditto.